# invoice-processor

./: .env.example  .gitignore  Dockerfile  README.md  api.py  app.py  auth.py  database.py  db_setup.py  destinations.py  docker-compose.yml  jobs.py  models.py  nginx.conf  package-lock.json  password_encryption.py  pyproject.toml  requirements.txt  scheduler.py  worker.py
.github/workflows/: deploy.yml
.streamlit/: config.toml
invoice-ui/: index.html  package-lock.json  package.json
invoice-ui/src/: api.js  main.jsx
invoice-ui/src/components/: InvoiceCard.jsx  Layout.jsx
invoice-ui/src/context/: AppContext.jsx
invoice-ui/src/pages/: Dashboard.jsx  InvoiceHistory.jsx  Login.jsx  ProcessInvoice.jsx  Settings.jsx
invoiceiq-dash/: index.html  tailwind.config.ts  vite.config.ts
invoiceiq-dash/src/: App.tsx  index.css
invoiceiq-dash/src/components/invoice/: InvoiceModal.tsx  StatusBadge.tsx
invoiceiq-dash/src/components/layout/: AppHeader.tsx  AppLayout.tsx  AppSidebar.tsx  PageWrapper.tsx  ProtectedRoute.tsx
invoiceiq-dash/src/components/settings/: EmailServerForm.tsx  ModelConfigForm.tsx  SuccessAnimation.tsx  WebhookForm.tsx
invoiceiq-dash/src/context/: AuthContext.tsx  ThemeContext.tsx
invoiceiq-dash/src/data/: mockInvoices.ts
invoiceiq-dash/src/lib/: api.ts
invoiceiq-dash/src/pages/: InvoiceDetailPage.tsx  InvoicesPage.tsx  LoginPage.tsx  SettingsPage.tsx
knowledge/: user_preference.txt
src/invoice_processing_automation_system/: Gmail Integration Guide.md  crew.py  email_fetcher.py  fetch_latest_emails.py  init_gmail_auth.py  main.py  package-lock.json  sheets.py
src/invoice_processing_automation_system/config/: agents.yaml  tasks.yaml
src/invoice_processing_automation_system/tools/: custom_tool.py
