[project]
name = "invoice_processing_automation_system"
version = "0.1.0"
description = "invoice_processing_automation_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "crewai[google-genai,litellm,tools]==1.11.0",
    "fastapi>=0.135.3",
    "google-api-python-client>=2.193.0",
    "google-auth>=2.49.1",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "gspread>=6.2.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pytesseract>=0.3.13",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.38.0",
    "uvicorn[standard]>=0.42.0",
]

[project.scripts]
invoice_processing_automation_system = "invoice_processing_automation_system.main:run"
run_crew = "invoice_processing_automation_system.main:run"
train = "invoice_processing_automation_system.main:train"
replay = "invoice_processing_automation_system.main:replay"
test = "invoice_processing_automation_system.main:test"
run_with_trigger = "invoice_processing_automation_system.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6", "lancedb==0.30.0"]
